# tetris-crisbypass

./: .gitignore  CMakeLists.txt  tetris_aventureiro.c  tetris_mestre.c  tetris_novato.c
